// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput Should be correctly disabled 1`] = `
<div
  className="flame-input "
>
  <input
    disabled={true}
    type="text"
  />
</div>
`;

exports[`TextInput Should be correctly enabled 1`] = `
<div
  className="flame-input "
>
  <input
    disabled={false}
    type="text"
  />
</div>
`;

exports[`TextInput Should render correctly 1`] = `
<div
  className="flame-input "
>
  <input
    type="text"
  />
</div>
`;

exports[`TextInput Should render label 1`] = `
<div
  className="flame-input "
>
  <span
    className="flame-input-label"
  >
    label
  </span>
  <input
    type="text"
  />
</div>
`;
